Managed to make tests work. Added first test.